// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard editable 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "252px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Really really really long card title?"
          >
            Really really really long card title?
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gTExVy"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 jWmKBV"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Monthly summary"
                size="SMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="SMALL"
                    title="-- Wh"
                    value="--"
                  >
                    --
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 hFUKTu"
                size="SMALL"
                title="Monthly summary"
              >
                Monthly summary
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Yearly summary"
                size="SMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="SMALL"
                    title="-- Wh"
                    value="--"
                  >
                    --
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 hFUKTu"
                size="SMALL"
                title="Yearly summary"
              >
                Yearly summary
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard empty state 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "252px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Facility Conditions"
          >
            Facility Conditions
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gTExVy"
        >
          <div
            className="Card__EmptyMessageWrapper-v5r71h-3 hrQFeA"
          >
            No data is available for this time range.
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard large / vertical /  5 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "300px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Facility Conditions"
          >
            Facility Conditions
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 fabdLf"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 jWmKBV"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="LARGE"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Comfort Level"
                size="LARGE"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="LARGE"
                    title="89 %"
                    value={89}
                  >
                    89
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 jvOQzz"
                size="LARGE"
                title="Comfort Level"
              >
                Comfort Level
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="LARGE"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="LARGE"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Average Temperature"
                size="LARGE"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="LARGE"
                    title="76.7 ˚F"
                    value={76.7}
                  >
                    76.7
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 jvOQzz"
                size="LARGE"
                title="Average Temperature"
              >
                Average Temperature
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="LARGE"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="LARGE"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Utilization"
                size="LARGE"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="LARGE"
                    title="76 %"
                    value={76}
                  >
                    76
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 krPcSU"
                size="LARGE"
                title="Utilization"
              >
                Utilization
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="LARGE"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="LARGE"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Humidity"
                size="LARGE"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="LARGE"
                    title="50 %"
                    value={50}
                  >
                    50
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 krPcSU"
                size="LARGE"
                title="Humidity"
              >
                Humidity
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="LARGE"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="LARGE"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Air Flow"
                size="LARGE"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 loxLrG"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="LARGE"
                    title="0.567 "
                    value={0.567}
                  >
                    0.6
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 jvOQzz"
                size="LARGE"
                title="Air Flow"
              >
                Air Flow
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard long titles and values 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "118px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Really long card title?"
          >
            Really long card title?
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gPUVrT"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 kwZDrJ"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="XSMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eCIOAU"
                label="Monthly summary"
                size="XSMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 hbzXyh"
                    size="XSMALL"
                    title="20000000000000000 "
                    value={20000000000000000}
                  >
                    20000T
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 gHjNPp"
                size="XSMALL"
                title="Monthly summary"
              >
                Monthly summary
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard long titles and values/multiple 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "252px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Really really really long card title?"
          >
            Really really really long card title?
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gTExVy"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 jWmKBV"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Monthly summary"
                size="SMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="SMALL"
                    title="100000000 Wh"
                    value={100000000}
                  >
                    100M
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 hFUKTu"
                size="SMALL"
                title="Monthly summary"
              >
                Monthly summary
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Yearly summary"
                size="SMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="SMALL"
                    title="40000000000000 Wh"
                    value={40000000000000}
                  >
                    40T
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 hFUKTu"
                size="SMALL"
                title="Yearly summary"
              >
                Yearly summary
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard medium / horizontal /  3 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "300px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Facility Conditions"
          >
            Facility Conditions
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gTExVy"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 jWmKBV"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="MEDIUM"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Comfort Level"
                size="MEDIUM"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="MEDIUM"
                    title="89 %"
                    value={89}
                  >
                    89
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 jvOQzz"
                size="MEDIUM"
                title="Comfort Level"
              >
                Comfort Level
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="MEDIUM"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="MEDIUM"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Average Temperature"
                size="MEDIUM"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="MEDIUM"
                    title="76.7 ˚F"
                    value={76.7}
                  >
                    76.7
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 jvOQzz"
                size="MEDIUM"
                title="Average Temperature"
              >
                Average Temperature
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="MEDIUM"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="MEDIUM"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Utilization"
                size="MEDIUM"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="MEDIUM"
                    title="76 %"
                    value={76}
                  >
                    76
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 krPcSU"
                size="MEDIUM"
                title="Utilization"
              >
                Utilization
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard small / horizontal /  2 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "300px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Facility Conditions"
          >
            Facility Conditions
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gTExVy"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 jWmKBV"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Comfort Level"
                size="SMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="SMALL"
                    title="89 %"
                    value={89}
                  >
                    89
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 hFUKTu"
                size="SMALL"
                title="Comfort Level"
              >
                Comfort Level
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Average Temperature"
                size="SMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="SMALL"
                    title="76.7 ˚F"
                    value={76.7}
                  >
                    76.7
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 hFUKTu"
                size="SMALL"
                title="Average Temperature"
              >
                Average Temperature
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard small / vertical /  2 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "252px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Facility Conditions"
          >
            Facility Conditions
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gTExVy"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 jWmKBV"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Comfort Level"
                size="SMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="SMALL"
                    title="89 %"
                    value={89}
                  >
                    89
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 hFUKTu"
                size="SMALL"
                title="Comfort Level"
              >
                Comfort Level
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Average Temperature"
                size="SMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="SMALL"
                    title="76.7 ˚F"
                    value={76.7}
                  >
                    76.7
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 hFUKTu"
                size="SMALL"
                title="Average Temperature"
              >
                Average Temperature
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard small / vertical /  3 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "252px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Facility Conditions"
          >
            Facility Conditions
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gTExVy"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 jWmKBV"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Comfort Level"
                size="SMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="SMALL"
                    title="89 %"
                    value={89}
                  >
                    89
                  </span>
                </div>
                <div
                  className="Attribute__StyledIcon-dhraql-5 gssLPC"
                >
                  <div
                    className="Attribute__ThresholdIconWrapper-dhraql-2 iEsJiF"
                  >
                    <svg
                      aria-label="> 80"
                      className="Attribute__ThresholdIcon-dhraql-3 elzdlt"
                      fill="#F00"
                      fillRule="evenodd"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        &gt; 80
                      </title>
                      <path
                        d="M.75 16a.75.75 0 0 1-.67-1.085L7.33.415a.75.75 0 0 1 1.34 0l7.25 14.5A.75.75 0 0 1 15.25 16H.75zm6.5-10v5h1.5V6h-1.5zM8 13.5A.75.75 0 1 0 8 12a.75.75 0 0 0 0 1.5z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 hFUKTu"
                size="SMALL"
                title="Comfort Level"
              >
                Comfort Level
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Average Temperature"
                size="SMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="SMALL"
                    title="null ˚F"
                    value={null}
                  >
                    --
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 hFUKTu"
                size="SMALL"
                title="Average Temperature"
              >
                Average Temperature
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Humidity"
                size="SMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="SMALL"
                    title="76.7 ˚F"
                    value={76.7}
                  >
                    76.7
                  </span>
                </div>
                <div
                  className="Attribute__StyledIcon-dhraql-5 gssLPC"
                >
                  <div
                    className="Attribute__ThresholdIconWrapper-dhraql-2 iEsJiF"
                  >
                    <svg
                      aria-label="< 80"
                      className="Attribute__ThresholdIcon-dhraql-3 elzdlt"
                      fill="#5aa700"
                      fillRule="evenodd"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        &lt; 80
                      </title>
                      <path
                        d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.293-11.332L6.75 9.21 4.707 7.168 3.293 8.582 6.75 12.04l5.957-5.957-1.414-1.414z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 ceuwLr"
                size="SMALL"
                title="Humidity"
              >
                Humidity
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard small / vertical / multiple 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "252px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Facility Conditions"
          >
            Facility Conditions
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gTExVy"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 jWmKBV"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Comfort Level"
                size="SMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="SMALL"
                    title="89 %"
                    value={89}
                  >
                    89
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 hFUKTu"
                size="SMALL"
                title="Comfort Level"
              >
                Comfort Level
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Average Temperature"
                size="SMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="SMALL"
                    title="76.7 ˚F"
                    value={76.7}
                  >
                    76.7
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 hFUKTu"
                size="SMALL"
                title="Average Temperature"
              >
                Average Temperature
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="SMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Utilization"
                size="SMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="SMALL"
                    title="76 %"
                    value={76}
                  >
                    76
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 ceuwLr"
                size="SMALL"
                title="Utilization"
              >
                Utilization
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard small / vertical / single 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "252px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Facility Conditions"
          >
            Facility Conditions
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gTExVy"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 jWmKBV"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 eGXBSf"
              size="SMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eexmWz"
                label="Comfort Level"
                size="SMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 loxLrG"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="SMALL"
                    title="89 %"
                    value={89}
                  >
                    89
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 cAyPcU"
                size="SMALL"
                title="Comfort Level"
              >
                Comfort Level
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard tall / vertical /  6 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "250px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 kGdXdI"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Facility Conditions"
          >
            Facility Conditions
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 fabdLf"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 jWmKBV"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="TALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Comfort Level"
                size="TALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="TALL"
                    title="89 %"
                    value={89}
                  >
                    89
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 IgeiL"
                size="TALL"
                title="Comfort Level"
              >
                Comfort Level
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="TALL"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="TALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Average Temperature"
                size="TALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="TALL"
                    title="76.7 ˚F"
                    value={76.7}
                  >
                    76.7
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 IgeiL"
                size="TALL"
                title="Average Temperature"
              >
                Average Temperature
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="TALL"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="TALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Utilization"
                size="TALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="TALL"
                    title="76 %"
                    value={76}
                  >
                    76
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 fVxPsv"
                size="TALL"
                title="Utilization"
              >
                Utilization
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="TALL"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="TALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="CPU"
                size="TALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="TALL"
                    title="76 %"
                    value={76}
                  >
                    76
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 fVxPsv"
                size="TALL"
                title="CPU"
              >
                CPU
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="TALL"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="TALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Humidity"
                size="TALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="TALL"
                    title="76 %"
                    value={76}
                  >
                    76
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 fVxPsv"
                size="TALL"
                title="Humidity"
              >
                Humidity
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="TALL"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="TALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Air flow"
                size="TALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="TALL"
                    title="76 %"
                    value={76}
                  >
                    76
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 IgeiL"
                size="TALL"
                title="Air flow"
              >
                Air flow
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="TALL"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="TALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Air quality"
                size="TALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="TALL"
                    title="76 %"
                    value={76}
                  >
                    76
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 IgeiL"
                size="TALL"
                title="Air quality"
              >
                Air quality
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard wide / horizontal /  3 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "300px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 cynIXT"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Facility Conditions"
          >
            Facility Conditions
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gTExVy"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 jWmKBV"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="WIDE"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Comfort Level"
                size="WIDE"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="WIDE"
                    title="89 %"
                    value={89}
                  >
                    89
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 jvOQzz"
                size="WIDE"
                title="Comfort Level"
              >
                Comfort Level
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="WIDE"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="WIDE"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Average Temperature"
                size="WIDE"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="WIDE"
                    title="76.7 ˚F"
                    value={76.7}
                  >
                    76.7
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 jvOQzz"
                size="WIDE"
                title="Average Temperature"
              >
                Average Temperature
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="WIDE"
            >
              <hr
                className="ValueCard__AttributeSeparator-hyxf2q-2 hazVaq"
              />
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="WIDE"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 gYrKUA"
                label="Utilization"
                size="WIDE"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 kuugZx"
                    size="WIDE"
                    title="76 %"
                    value={76}
                  >
                    76
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 krPcSU"
                size="WIDE"
                title="Utilization"
              >
                Utilization
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard with boolean 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "118px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Uncomfortable?"
          >
            Uncomfortable?
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gPUVrT"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 kwZDrJ"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="XSMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eCIOAU"
                label="Monthly summary"
                size="XSMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 hbzXyh"
                    size="XSMALL"
                    title="false "
                    value={false}
                  >
                    <span
                      className="ValueRenderer__StyledBoolean-f4stpz-2 jHJBse"
                    >
                      false
                    </span>
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 gHjNPp"
                size="XSMALL"
                title="Monthly summary"
              >
                Monthly summary
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard xsmall / basic 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "118px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Occupancy"
          >
            Occupancy
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gPUVrT"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 kwZDrJ"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="XSMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eCIOAU"
                label={null}
                size="XSMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 iOFzxv"
                    size="XSMALL"
                    title="88 %"
                    value={88}
                  >
                    88
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 cAOhas"
                size="XSMALL"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard xsmall / long 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "118px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Occupancy"
          >
            Occupancy
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gPUVrT"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 kwZDrJ"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="XSMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eCIOAU"
                label={null}
                size="XSMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 bztBvA"
                    size="XSMALL"
                    title="Really really busy %"
                    value="Really really busy"
                  >
                    Really really busy
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 cAOhas"
                size="XSMALL"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard xsmall / thresholds (number, icon) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "118px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Alert Count"
          >
            Alert Count
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gPUVrT"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 kwZDrJ"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="XSMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eCIOAU"
                label={null}
                size="XSMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 loxLrG"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 iOFzxv"
                    size="XSMALL"
                    title="4 "
                    value={4}
                  >
                    4
                  </span>
                </div>
                <div
                  className="Attribute__StyledIcon-dhraql-5 gssLPC"
                >
                  <div
                    className="Attribute__ThresholdIconWrapper-dhraql-2 iEsJiF"
                  >
                    <svg
                      aria-label="< 5"
                      className="Attribute__ThresholdIcon-dhraql-3 elzdlt"
                      fill="green"
                      fillRule="evenodd"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        &lt; 5
                      </title>
                      <path
                        d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.293-11.332L6.75 9.21 4.707 7.168 3.293 8.582 6.75 12.04l5.957-5.957-1.414-1.414z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 cAOhas"
                size="XSMALL"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard xsmall / thresholds (number, no icon) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "118px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Alert Count"
          >
            Alert Count
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gPUVrT"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 kwZDrJ"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="XSMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eCIOAU"
                label={null}
                size="XSMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 bShNpT"
                  color="red"
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 iOFzxv"
                    size="XSMALL"
                    title="35 "
                    value={35}
                  >
                    35
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 cAOhas"
                size="XSMALL"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard xsmall / title 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "118px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Foot Traffic"
          >
            Foot Traffic
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gPUVrT"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 kwZDrJ"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="XSMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eCIOAU"
                label="Average"
                size="XSMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 hbzXyh"
                    size="XSMALL"
                    title="13572 "
                    value={13572}
                  >
                    14K
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 cAOhas"
                size="XSMALL"
                title="Average"
              >
                Average
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard xsmall / trend down 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "150px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Foot Traffic"
          >
            Foot Traffic
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gPUVrT"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 kwZDrJ"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="XSMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eCIOAU"
                label={null}
                size="XSMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 hbzXyh"
                    size="XSMALL"
                    title="13572 "
                    value={13572}
                  >
                    14K
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 cAOhas"
                size="XSMALL"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard xsmall / trend up 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "150px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Alert Count"
          >
            Alert Count
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gPUVrT"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 kwZDrJ"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="XSMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eCIOAU"
                label={null}
                size="XSMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 hbzXyh"
                    size="XSMALL"
                    title="35 "
                    value={35}
                  >
                    35
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 cAOhas"
                size="XSMALL"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard xsmall / units 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "150px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Occupancy"
          >
            Occupancy
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gPUVrT"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 kwZDrJ"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 emVGjx"
              size="XSMALL"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eCIOAU"
                label={null}
                size="XSMALL"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 hqoUNX"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 iOFzxv"
                    size="XSMALL"
                    title="88 %"
                    value={88}
                  >
                    88
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 cAOhas"
                size="XSMALL"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard xsmallwide / horizontal 2 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "300px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Status"
          >
            Status
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gPUVrT"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 kwZDrJ"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 plcOs"
              size="XSMALLWIDE"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eCIOAU"
                label="Status"
                size="XSMALLWIDE"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 loxLrG"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 fgQTCd"
                    size="XSMALLWIDE"
                    title="Problem "
                    value="Problem"
                  >
                    Problem
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 iJHIKN"
                size="XSMALLWIDE"
                title="Status"
              >
                Status
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 plcOs"
              size="XSMALLWIDE"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eCIOAU"
                label="Comfort level"
                size="XSMALLWIDE"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 loxLrG"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 fgQTCd"
                    size="XSMALLWIDE"
                    title="Healthy feels"
                    value="Healthy"
                  >
                    Healthy
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 iJHIKN"
                size="XSMALLWIDE"
                title="Comfort level"
              >
                Comfort level
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard xsmallwide / thresholds (string) 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "252px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Status"
          >
            Status
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gPUVrT"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 kwZDrJ"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 eGXBSf"
              size="XSMALLWIDE"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eCIOAU"
                label={null}
                size="XSMALLWIDE"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 loxLrG"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 fgQTCd"
                    size="XSMALLWIDE"
                    title="Unhealthy "
                    value="Unhealthy"
                  >
                    Unhealthy
                  </span>
                </div>
                <div
                  className="Attribute__StyledIcon-dhraql-5 gssLPC"
                >
                  <div
                    className="Attribute__ThresholdIconWrapper-dhraql-2 iEsJiF"
                  >
                    <svg
                      aria-label="= Unhealthy"
                      className="Attribute__ThresholdIcon-dhraql-3 elzdlt"
                      fill="red"
                      fillRule="evenodd"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        = Unhealthy
                      </title>
                      <path
                        d="M8 6.586L5.879 4.464 4.464 5.88 6.586 8l-2.122 2.121 1.415 1.415L8 9.414l2.121 2.122 1.415-1.415L9.414 8l2.122-2.121-1.415-1.415L8 6.586zM8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 iJHIKN"
                size="XSMALLWIDE"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|ValueCard xsmallwide / vertical 2 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "margin": 20,
          "width": "252px",
        }
      }
    >
      <div
        className="Card__CardWrapper-v5r71h-0 fbzdtE"
        id="facilitycard"
      >
        <div
          className="card--header"
        >
          <span
            className="card--title"
            title="Status"
          >
            Status
             
          </span>
          <div
            className="bx--toolbar card--toolbar"
          />
        </div>
        <div
          className="Card__CardContent-v5r71h-1 gPUVrT"
        >
          <div
            className="ValueCard__ContentWrapper-hyxf2q-0 kwZDrJ"
          >
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 plcOs"
              size="XSMALLWIDE"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eCIOAU"
                label="Status"
                size="XSMALLWIDE"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 loxLrG"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 fgQTCd"
                    size="XSMALLWIDE"
                    title="Good "
                    value="Good"
                  >
                    Good
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 iJHIKN"
                size="XSMALLWIDE"
                title="Status"
              >
                Status
              </div>
            </div>
            <div
              className="ValueCard__AttributeWrapper-hyxf2q-1 plcOs"
              size="XSMALLWIDE"
            >
              <div
                className="Attribute__StyledAttribute-dhraql-0 eCIOAU"
                label="Comfort level"
                size="XSMALLWIDE"
              >
                <div
                  className="ValueRenderer__Attribute-f4stpz-0 loxLrG"
                  color={null}
                >
                  <span
                    className="ValueRenderer__AttributeValue-f4stpz-1 fgQTCd"
                    size="XSMALLWIDE"
                    title="Healthy "
                    value="Healthy"
                  >
                    Healthy
                  </span>
                </div>
              </div>
              <div
                className="ValueCard__AttributeLabel-hyxf2q-4 iJHIKN"
                size="XSMALLWIDE"
                title="Comfort level"
              >
                Comfort level
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
